--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </div>
 
   <p class="dateMAJ">
-    Mise à jour liste le 12 août 2019
+    Mise à jour liste le 19 septembre 2019
   </p>
   <p class="dateMAJ2">
     Mise à jour prix le 13 août 2019
