--- a/livres.html
+++ b/livres.html
@@ -706,8 +706,8 @@
 
     <!--Livre 43-->
     <figure>
-      <a href="https://www.amazon.fr/Peter-Sagan-Mon-monde/dp/2378150687/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=sagan&qid=1568903444&s=gateway&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81M2HiP-OyL.jpg"
-          alt="Peter Sagan - Mon Monde" class="books" /></a>
+      <a href="https://www.amazon.fr/Peter-Sagan-Mon-monde/dp/2378150687/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=sagan&qid=1568903444&s=gateway&sr=8-1" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/81M2HiP-OyL.jpg" alt="Peter Sagan - Mon Monde" class="books" /></a>
       <figcaption>
         Peter Sagan
       </figcaption>
@@ -719,38 +719,37 @@
       </figcaption>
     </figure>
 
-    <!--Livre 44
+    <!--Livre 44-->
     <figure>
-      <a href="https://www.amazon.fr/Passions-Nicolas-Sarkozy/dp/B07S253JD9/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1561498848&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71lrITkBVML.jpg" alt="Passions"
-          class="books" /></a>
+      <a href="https://www.amazon.fr/quatre-coins-du-c%C5%93ur/dp/2259278795/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1NKE8J9HQ4CZS&keywords=francoise+sagan&qid=1569512440&s=gateway&sprefix=francoise%2Caps%2C148&sr=8-1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61OJEaKv2lL.jpg" alt="Les quatre coins du cœur" class="books" /></a>
       <figcaption>
-        Nicolas Sarkozy
+        Françoise Sagan
       </figcaption>
       <figcaption>
-        Passions
+        Les quatre coins du cœur
       </figcaption>
       <figcaption>
-        19,50€
+        19,00€
       </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
-
   <div class="booksLine">
-    <!--Livre 45
+    <!--Livre 45-->
     <figure>
-      <a href="https://www.amazon.fr/Soci%C3%A9t%C3%A9-du-Spectacle-Guy-Debord/dp/2072779405/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1561844645&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/812Cxn-3VgL.jpg"
-          alt="La Société du Spectacle" class="books" /></a>
+      <a href="https://www.amazon.fr/Louvre-Josselin-Guillois/dp/2021431096/ref=sr_1_3?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=louvre&qid=1569509201&s=gateway&sr=8-3" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/616zvJ5vsAL.jpg" alt="Louvre" class="books" /></a>
       <figcaption>
-        Guy Debord
+        Josselin Guillois
       </figcaption>
       <figcaption>
-        La Société du Spectacle
+        Louvre
       </figcaption>
       <figcaption>
-        6,80€
+        18,00€
       </figcaption>
-    </figure>-->
+    </figure>
 
 
     <!--Livre 46
