--- a/livres.html
+++ b/livres.html
@@ -752,35 +752,37 @@
     </figure>
 
 
-    <!--Livre 46
-  <figure>
-    <a href="https://www.amazon.fr/Combien-veux-tu-m%C3%A9pouser-Saphia-Azzeddine/dp/224680437X/ref=sr_1_5?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-5" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81RVBB8f9sL.jpg" alt="Combien veux-tu m'épouser ?" class="books" /></a>
-    <figcaption>
-      Saphia Azzeddine
-    </figcaption>
-    <figcaption>
-      Combien veux-tu m'épouser ?
-    </figcaption>
-    <figcaption>
-      17,90€
-    </figcaption>
-  </figure>
-  -->
+    <!--Livre 46-->
+    <figure>
+      <a href="https://www.amazon.fr/cri-du-ventre-Enora-Malagr%C3%A9/dp/B07RX2JTCF/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1571667781&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71rANakYlqL.jpg"
+          alt="Un Cri Du Ventre" class="books" /></a>
+      <figcaption>
+        Enora Malagré
+      </figcaption>
+      <figcaption>
+        Un Cri Du Ventre
+      </figcaption>
+      <figcaption>
+        18,00€
+      </figcaption>
+    </figure>
 
-    <!--Livre 47
-  <figure>
-    <a href="https://www.amazon.fr/Bilqiss-Saphia-Azzeddine/dp/2234077966/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1555434157&sr=1-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81eyYcanNOL.jpg" alt="Bilqiss" class="books" /></a>
-    <figcaption>
-      Saphia Azzeddine
-    </figcaption>
-    <figcaption>
-      Bilqiss
-    </figcaption>
-    <figcaption>
-      18,00€
-    </figcaption>
-  </figure>
--->
+
+    <!--Livre 47-->
+    <figure>
+      <a href="https://www.amazon.fr/R%C3%A9volte-rebelles-sport-Maryse-Ewanje-epee/dp/2755643641/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=revolte+maryse&qid=1571667765&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71u1ZRMhMHL.jpg" alt="Révolte ! Les rebelles du sport"
+          class="books" /></a>
+      <figcaption>
+        Maryse Éwanjé-Épée
+      </figcaption>
+      <figcaption>
+        Révolte ! Les rebelles du sport
+      </figcaption>
+      <figcaption>
+        29,95€
+      </figcaption>
+    </figure>
+
 
     <!--Livre 48
   <figure>
