maj st nicolas et noel

--- a/autres.html
+++ b/autres.html
@@ -23,13 +23,13 @@
   <div class="othersLine">
     <!--Autres 1-->
     <figure>
-      <a href="https://shop.vitality.gg/products/maillot-officiel-team-vitality-floque?variant=29379536879734" target="_blank"> <img
+      <a href="https://shop.vitality.gg/products/maillot-officiel-team-vitality-floque?variant=29379536715894" target="_blank"> <img
           src="https://cdn.shopify.com/s/files/1/0049/2293/3366/products/Site-Front_0dd604c2-62ca-4305-85bb-58573be32e43_600x800.png?v=1562489356" alt="Vitality" class="others" /></a>
       <figcaption>
         Maillot Vitality
       </figcaption>
       <figcaption>
-        Rupture de Stock taille
+        Rupture de Stock
       </figcaption>
       <figcaption>
         Flocage Siamja
@@ -47,7 +47,7 @@
         Casquette Vitality
       </figcaption>
       <figcaption>
-        17,50€ (PROMOTION)
+        24,99€
       </figcaption>
     </figure>
 
@@ -73,6 +73,9 @@
         Version noire
       </figcaption>
       <figcaption>
+        Rupture de Stock
+      </figcaption>
+      <figcaption>
         25,00€
       </figcaption>
     </figure>
@@ -81,15 +84,19 @@
   <div class="othersLine">
     <!--Autres 5-->
     <figure>
-      <a href="https://www.designbyhumans.com/shop/mug/logo-mug/887902/" target="_blank"> <img src="https://cdn.designbyhumans.com/product_images/p/887902.1633.b5d41S7ay1Cm2MjUBAA-650x650-b-p.png" alt="Mug Lupo" class="others" /></a>
+      <a href="https://www.amazon.fr/Thrones-Tr%C3%B4ne-Lint%C3%A9grale-Saisons-Blu-Ray/dp/B07SZBK3WR/ref=sr_1_8?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1VGZDA53QY49R&keywords=game+of+thrones&qid=1573230847&sprefix=game+of+t%2Caps%2C159&sr=8-8"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71Xza7-HIhL._SL1000_.jpg" alt="Intégrale GoT" class="others" /></a>
       <figcaption>
-        Mug Dr Lupo
+        Intégrale Game of Thrones
       </figcaption>
       <figcaption>
-        15,00$
+        Blu Ray
       </figcaption>
       <figcaption>
-        Voir si payement en euro
+        Sortie le 3 décembre 2019
+      </figcaption>
+      <figcaption>
+        130,49€
       </figcaption>
     </figure>
 
@@ -104,7 +111,7 @@
         L'intégrale en Blu-Ray
       </figcaption>
       <figcaption>
-        59,99€
+        72,55€
       </figcaption>
     </figure>
 
@@ -137,37 +144,7 @@
   </div>
 
   <div class="othersLine">
-    <!--Autres 9-->
-    <figure>
-      <a href="https://www.amazon.fr/Aftermath-Blu-ray-Arnold-Schwarzenegger/dp/B071CR98FB/ref=tmm_blu_title_1?_encoding=UTF8&qid=&sr=" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61VMloCcolL._SL1000_.jpg"
-          alt="Aftermath" class="others" /></a>
-      <figcaption>
-        Aftermath
-      </figcaption>
-      <figcaption>
-        Blu Ray
-      </figcaption>
-      <figcaption>
-        10,80€
-      </figcaption>
-    </figure>
-
-    <!--Autres 10-->
-    <figure>
-      <a href="https://www.amazon.fr/Killing-Gunther-Blu-ray-Arnold-Schwarzenegger/dp/B079PCBC6L/ref=tmm_blu_title_0?_encoding=UTF8&qid=&sr=" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/716SpSmGxBL._SL1000_.jpg"
-          alt="Les Heures Sombres" class="others" /></a>
-      <figcaption>
-        Killing Gunther
-      </figcaption>
-      <figcaption>
-        Blu Ray
-      </figcaption>
-      <figcaption>
-        9,99€
-      </figcaption>
-    </figure>
-
-    <!--Autres 11-->
+    <!--Autres 9
     <figure>
       <a href="https://www.amazon.fr/Monopoly-societe-Thrones-Collector-fran%C3%A7aise/dp/B07MV1NS8Z/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=3LRZVONKUAQH0&keywords=game+of+thrones+monopoly&qid=1558896777&s=gateway&sprefix=game+of+thrones+mo%2Caps%2C139&sr=8-1"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81gMNMqzTmL._SL1500_.jpg" alt="Monopoly GoT" class="others" /></a>
@@ -175,11 +152,38 @@
         Monopoly GoT
       </figcaption>
       <figcaption>
-        33,99€
+        29,90€
+      </figcaption>
+    </figure>-->
+
+    <!--Autres 10-->
+    <figure>
+      <a href="https://www.boutiquezerator.com/product-page/mug-zerator" target="_blank"> <img
+          src="https://static.wixstatic.com/media/f9fe86_c1b2b957e346405ab7120a906830da44~mv2.jpg/v1/fill/w_498,h_664,al_c,q_85,usm_0.66_1.00_0.01/f9fe86_c1b2b957e346405ab7120a906830da44~mv2.webp" alt="Mug Zerator" class="others" /></a>
+      <figcaption>
+        Mug Zerator
+      </figcaption>
+      <figcaption>
+        19,90€
       </figcaption>
     </figure>
 
-    <!--Autres 12-->
+    <!--Autres 11-->
+    <figure>
+      <a href="https://www.amazon.fr/Chernobyl-Blu-Ray-Jared-Harris/dp/B07SZGSXT3?pf_rd_p=eab93c21-6a33-4780-aa56-35c8fe5fc951&pd_rd_wg=srzCG&pf_rd_r=JRY7AN681R6AYFAFNDXQ&ref_=pd_gw_cr_simh&pd_rd_w=xJ0th&pd_rd_r=298834d5-8235-4e45-8dcb-0eda62497f72"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/41p%2BZnkfk7L.jpg" alt="Chernobyl" class="others" /></a>
+      <figcaption>
+        Chernobyl
+      </figcaption>
+      <figcaption>
+        L'intégrale en Blu Ray
+      </figcaption>
+      <figcaption>
+        24,99€
+      </figcaption>
+    </figure>
+
+    <!--Autres 12
     <figure>
       <a href="https://shop.wwe.com/alexa-bliss-twisted-bliss-15-oz.-mug/220715CB59.html?dwvar_220715CB59_color=No%20Color#pagesize=78&start=21" target="_blank"> <img
           src="https://shop.wwe.com/on/demandware.static/-/Sites-main/default/dw88bc650a/images/large/e6ec192d2dccb8461b0ee59381ffbde7mockup-61c99c26.jpg" alt="Mug Alexa Bliss" class="others" /></a>
@@ -192,12 +196,11 @@
       <figcaption>
         wwe.com (USA)
       </figcaption>
-    </figure>
-
+    </figure>-->
   </div>
 
   <div class="othersLine">
-    <!--Autres 13-->
+    <!--Autres 13
     <figure>
       <a href="https://www.boutiquezerator.com/product-page/mug-zerator" target="_blank"> <img
           src="https://static.wixstatic.com/media/f9fe86_c1b2b957e346405ab7120a906830da44~mv2.jpg/v1/fill/w_498,h_664,al_c,q_85,usm_0.66_1.00_0.01/f9fe86_c1b2b957e346405ab7120a906830da44~mv2.webp" alt="Mug Zerator" class="others" /></a>
@@ -207,9 +210,9 @@
       <figcaption>
         19,90€
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Autres 14-->
+    <!--Autres 14
     <figure>
       <a href="https://www.amazon.fr/Dernier-rempart-Arnold-Schwarzenegger/dp/B00B9G1D9Q/ref=tmm_dvd_title_0?_encoding=UTF8&amp;qid=&amp;sr=" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/712f9-DHLoL._SL1372_.jpg"
           alt="Le Dernier Rempart" class="others" /></a>
@@ -222,7 +225,7 @@
       <figcaption>
         7,50€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Autres 15
     <figure>
