--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
   </div>
 
   <p class="dateMAJ">
-    Mise à jour liste le 21 octobre 2019
+    Mise à jour liste le 08 novembre 2019
   </p>
   <p class="dateMAJ2">
-    Mise à jour prix le 13 août 2019
+    Mise à jour prix le 08 novembre 2019
   </p>
 
 </body>
