--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -23,30 +23,24 @@
   <div class="gamesLine">
     <!--Jeu 1-->
     <figure>
-      <a href="https://www.amazon.fr/Square-Enix-SQEA27-UK-22ST-Just-Cause/dp/B07DNY1KPK/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=just+cause+4&qid=1556021586&s=videogames&sr=1-2" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
+      <a href="https://www.amazon.fr/Sony-Death-Stranding/dp/B01H1OOU8K/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=279BCK9Q7UQXO&keywords=death%2Bstranding&qid=1573229617&sprefix=death%2Bstr%2Caps%2C147&sr=8-1&th=1" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/61fZRW7djKL._SL1000_.jpg" alt="Death Stranding" class="game" /></a>
       <figcaption>
-        Just cause 4
+        Death Stranding
       </figcaption>
       <figcaption>
-        25,99€ sur Amazon
-      </figcaption>
-      <figcaption>
-        69,99€ sur PlayStation
+        54,99€
       </figcaption>
     </figure>
 
     <!--Jeu 2-->
     <figure>
-      <a href="#" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71qbzh%2BrMJL._SL1000_.jpg" alt="Crash Team Racing Nitro-Fueled" class="game" /></a>
+      <a href="https://www.amazon.fr/Sony-MediEvil-PS4/dp/B07S31PDMW/ref=pd_sbs_63_10?_encoding=UTF8&pd_rd_i=B07S31PDMW&pd_rd_r=3b0e3e96-e177-435b-82b2-68912482730c&pd_rd_w=Ynh5I&pd_rd_wg=wBDIQ&pf_rd_p=26d54ac2-ee81-4c62-8302-1e18ced12245&pf_rd_r=F6VSN7G9329B1EM9A27K&psc=1&refRID=F6VSN7G9329B1EM9A27K" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81nVKa-ZJ4L._SL1500_.jpg" alt="Medievil" class="game" /></a>
       <figcaption>
-        Crash Team Racing Edition Nitros Oxyde
+        Medievil
       </figcaption>
       <figcaption>
-        Edition Nitros Oxyde
-      </figcaption>
-      <figcaption>
-        59,99€ sur PlayStation
+        24,99€
       </figcaption>
     </figure>
 
@@ -58,42 +52,36 @@
         Shadow of the Tomb Raider
       </figcaption>
       <figcaption>
-        29,37€ sur Amazon
-      </figcaption>
-      <figcaption>
-        26,39€ (edition deluxe) sur PlayStation
+        30,99€ sur Amazon
       </figcaption>
     </figure>
 
-    <!--Jeu 4-->
+    <!--Jeu 4
     <figure>
-      <a href="#" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81XMP8j9ZxL._SL1500_.jpg" alt="Life is Strange 2" class="game" /></a>
+      <a href="https://www.amazon.fr/Life-Strange-2-pour-PS4/dp/B07YSH6NB4/ref=pd_sim_63_6/257-8925375-7060938?_encoding=UTF8&pd_rd_i=B07YSH6NB4&pd_rd_r=574e0c78-4409-4a33-9bbe-e900edceff0d&pd_rd_w=lc2R7&pd_rd_wg=j4iaD&pf_rd_p=79de6a4a-b21a-4694-99e3-cde9267231ac&pf_rd_r=GMZDMX277SXFVG1MTW1R&psc=1&refRID=GMZDMX277SXFVG1MTW1R" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61flUJDvU7L._SL1000_.jpg" alt="Life is Strange 2" class="game" /></a>
       <figcaption>
         Life is Strange 2
       </figcaption>
       <figcaption>
         39,99€ sur PlayStation
       </figcaption>
-    </figure>
+    </figure>-->
   </div>
 
   <div class="gamesLine">
-    <!--Jeu 5-->
+    <!--Jeu 5
     <figure>
       <a href="#" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71deJ-FfN2L._AC_SL1500_.jpg" alt="Death Stranding" class="game" /></a>
       <figcaption>
-        Death Stranding
+        Final Fantasy VII
       </figcaption>
       <figcaption>
-        Précommande
+        Sortie le 3 mars 2020
       </figcaption>
       <figcaption>
-        69,99€ sur PlayStation
+        59,99€
       </figcaption>
-      <figcaption>
-        Sortie le 08/11/19
-      </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Jeu 6
     <figure>
