--- a/livres.html
+++ b/livres.html
@@ -721,16 +721,16 @@
 
     <!--Livre 44-->
     <figure>
-      <a href="https://www.amazon.fr/quatre-coins-du-c%C5%93ur/dp/2259278795/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1NKE8J9HQ4CZS&keywords=francoise+sagan&qid=1569512440&s=gateway&sprefix=francoise%2Caps%2C148&sr=8-1"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61OJEaKv2lL.jpg" alt="Les quatre coins du cœur" class="books" /></a>
+      <a href="https://www.amazon.fr/B%C3%AAte-noire-Condamn%C3%A9-%C3%A0-plaider/dp/2290059749/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1573229678&sr=8-1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61Xhar-nxKL.jpg" alt="Dupond Moretti" class="books" /></a>
       <figcaption>
-        Françoise Sagan
+        Eric Dupond-Moretti
       </figcaption>
       <figcaption>
-        Les quatre coins du cœur
+        Bête noire : "Condamné à plaider"
       </figcaption>
       <figcaption>
-        19,00€
+        7,00€
       </figcaption>
     </figure>
   </div>
