--- a/livres.html
+++ b/livres.html
@@ -783,20 +783,21 @@
       </figcaption>
     </figure>
 
+    <!--Livre 48-->
 
-    <!--Livre 48
-  <figure>
-    <a href="https://www.amazon.fr/Sa-m%C3%A8re-Saphia-Azzeddine/dp/2234081742/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71vCBTDzN5L.jpg" alt="Sa Mère" class="books" /></a>
-    <figcaption>
-      Saphia Azzeddine
-    </figcaption>
-    <figcaption>
-      Sa mère
-    </figcaption>
-    <figcaption>
-      19,00€
-    </figcaption>
-  </figure>-->
+    <figure>
+      <a href="https://www.amazon.fr/Lib%C3%A9rez-votre-cerveau-Idriss-ABERKANE/dp/2266278576/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1573516992&sr=8-1" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/61ARxYzIhKL.jpg" alt="Libérez votre cerveau !" class="books" /></a>
+      <figcaption>
+        Idriss Aberkane
+      </figcaption>
+      <figcaption>
+        Libérez votre cerveau !
+      </figcaption>
+      <figcaption>
+        7,90€
+      </figcaption>
+    </figure>
   </div>
 
 
