--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -23,13 +23,13 @@
   <div class="gamesLine">
     <!--Jeu 1-->
     <figure>
-      <a href="https://www.amazon.fr/Sony-Death-Stranding/dp/B01H1OOU8K/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=279BCK9Q7UQXO&keywords=death%2Bstranding&qid=1573229617&sprefix=death%2Bstr%2Caps%2C147&sr=8-1&th=1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/61fZRW7djKL._SL1000_.jpg" alt="Death Stranding" class="game" /></a>
+      <a href="https://www.amazon.fr/Star-Wars-Jedi-Fallen-Order/dp/B07QN7HVMH/ref=sr_1_12?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=6PRCMHAUXCC&keywords=jedi+fallen+order&qid=1574032856&sprefix=jedi+fallen+o%2Caps%2C148&sr=8-12" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/71Xz9rNV5HL._SL1245_.jpg" alt="Fallen Order" class="game" /></a>
       <figcaption>
-        Death Stranding
+        Star Wars Jedi : Fallen Order
       </figcaption>
       <figcaption>
-        54,99€
+        66,11€
       </figcaption>
     </figure>
 
@@ -46,120 +46,100 @@
 
     <!--Jeu 3-->
     <figure>
-      <a href="https://www.amazon.fr/Shadow-of-the-Tomb-Raider/dp/B07H9W8CPC/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1C97HT7NS6MQB&keywords=shadow+of+the+tomb+raider+ps4&qid=1554820457&s=videogames&sprefix=shadow%2Cvideogames%2C138&sr=1-1"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71XoFWzXBBL._SL1492_.jpg" alt="Shadow of the Tomb Raider" class="game" /></a>
+      <a href="https://www.amazon.fr/Nintendo-Switch-avec-paire-Rouge/dp/B07WKNQ8JT/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=nintendo%2Bswitch&qid=1574032957&sr=8-1&th=1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71NaHhGzY7L._SL1500_.jpg" alt="Switch" class="game" /></a>
       <figcaption>
-        Shadow of the Tomb Raider
+        Nintendo Switch
       </figcaption>
       <figcaption>
-        30,99€ sur Amazon
+        299,98€ sur Amazon
       </figcaption>
     </figure>
 
-    <!--Jeu 4
+    <!--Jeu 4-->
     <figure>
-      <a href="https://www.amazon.fr/Life-Strange-2-pour-PS4/dp/B07YSH6NB4/ref=pd_sim_63_6/257-8925375-7060938?_encoding=UTF8&pd_rd_i=B07YSH6NB4&pd_rd_r=574e0c78-4409-4a33-9bbe-e900edceff0d&pd_rd_w=lc2R7&pd_rd_wg=j4iaD&pf_rd_p=79de6a4a-b21a-4694-99e3-cde9267231ac&pf_rd_r=GMZDMX277SXFVG1MTW1R&psc=1&refRID=GMZDMX277SXFVG1MTW1R" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61flUJDvU7L._SL1000_.jpg" alt="Life is Strange 2" class="game" /></a>
+      <a href="https://www.amazon.fr/Nintendo-Pok%C3%A9mon-Ep%C3%A9e/dp/B07R2M7H64/ref=pd_sim_63_14?_encoding=UTF8&pd_rd_i=B07QV7YRT7&pd_rd_r=0628726c-cc8b-4a47-8bf6-850d5c0d241c&pd_rd_w=G1Xo9&pd_rd_wg=Ecbfq&pf_rd_p=79de6a4a-b21a-4694-99e3-cde9267231ac&pf_rd_r=NEV47M1RK88HJGD04JFG&refRID=NEV47M1RK88HJGD04JFG&th=1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/819sd2k1sCL._SL1500_.jpg" alt="Pokemon" class="game" /></a>
       <figcaption>
-        Life is Strange 2
+        Pokémon Bouclier
       </figcaption>
       <figcaption>
-        39,99€ sur PlayStation
+        44,49€ sur Amazon
       </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
   <div class="gamesLine">
-    <!--Jeu 5
+    <!--Jeu 5-->
     <figure>
-      <a href="#" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71deJ-FfN2L._AC_SL1500_.jpg" alt="Death Stranding" class="game" /></a>
+      <a href="https://www.amazon.fr/Nintendo-0045496420888-Super-Mario-Odyssey/dp/B072KJWYL9/ref=pd_sim_63_8?_encoding=UTF8&pd_rd_i=B072KJWYL9&pd_rd_r=faba7ffe-f309-4f16-9853-9816416fa012&pd_rd_w=w36ZL&pd_rd_wg=h1L5Z&pf_rd_p=79de6a4a-b21a-4694-99e3-cde9267231ac&pf_rd_r=C8DP4MVYDHMZ7AK23MT4&psc=1&refRID=C8DP4MVYDHMZ7AK23MT4" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71YHciwZNAL._SL1000_.jpg" alt="Super Mario" class="game" /></a>
       <figcaption>
-        Final Fantasy VII
+        Super Mario Odyssey
       </figcaption>
       <figcaption>
-        Sortie le 3 mars 2020
-      </figcaption>
-      <figcaption>
-        59,99€
-      </figcaption>
-    </figure>-->
-
-    <!--Jeu 6
-    <figure>
-      <a href="https://www.amazon.fr/Square-Enix-SQEA27-UK-22ST-Just-Cause/dp/B07DNY1KPK/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=just+cause+4&qid=1556021586&s=videogames&sr=1-2" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
-      <figcaption>
-        Just cause 4
-      </figcaption>
-      <figcaption>
-        26,49€ sur Amazon
-      </figcaption>
-      <figcaption>
-        69,99€ sur PlayStation
-      </figcaption>
-    </figure>-->
-
-    <!--Jeu 7
-    <figure>
-      <a href="https://www.amazon.fr/Square-Enix-SQEA27-UK-22ST-Just-Cause/dp/B07DNY1KPK/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=just+cause+4&qid=1556021586&s=videogames&sr=1-2" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
-      <figcaption>
-        Just cause 4
-      </figcaption>
-      <figcaption>
-        26,49€ sur Amazon
-      </figcaption>
-      <figcaption>
-        69,99€ sur PlayStation
-      </figcaption>
-    </figure>-->
-
-    <!--Jeu 8
-    <figure>
-      <a href="#" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71deJ-FfN2L._AC_SL1500_.jpg" alt="Death Stranding" class="game" /></a>
-      <figcaption>
-        Death Stranding
-      </figcaption>
-      <figcaption>
-        Précommande
-      </figcaption>
-      <figcaption>
-        69,99€ sur PlayStation
-      </figcaption>
-      <figcaption>
-        Sortie le 08/11/19
+        44,49€
       </figcaption>
     </figure>
-  </div>-->
+
+    <!--Jeu 6-->
+    <figure>
+      <a href="https://www.amazon.fr/Nintendo-Super-Smash-Bros-Ultimate/dp/B07DPQD26J/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2A8N9OZP36T2M&keywords=smash+bros+ultimate&qid=1574113818&s=videogames&sprefix=smash%2Cvideogames%2C140&sr=1-1" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/81nTBvXpItL._SL1339_.jpg" alt="Smash Bros" class="game" /></a>
+      <figcaption>
+        Super Smash Bros Ultimate
+      </figcaption>
+      <figcaption>
+        49,00€ sur Amazon
+      </figcaption>
+    </figure>
+
+    <!--Jeu 7-->
+    <figure>
+      <a href="https://www.amazon.fr/Nintendo-0045496423124-Pok%C3%A9mon-Lets-Pikachu/dp/B07DF4HGBY/ref=pd_sim_63_7?_encoding=UTF8&pd_rd_i=B07DF4HGBY&pd_rd_r=0628726c-cc8b-4a47-8bf6-850d5c0d241c&pd_rd_w=G1Xo9&pd_rd_wg=Ecbfq&pf_rd_p=79de6a4a-b21a-4694-99e3-cde9267231ac&pf_rd_r=NEV47M1RK88HJGD04JFG&refRID=NEV47M1RK88HJGD04JFG&th=1" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/81liPjEvyDL._SL1500_.jpg" alt="Let's Go" class="game" /></a>
+      <figcaption>
+        Pokémon : Let's Go, Pikachu
+      </figcaption>
+      <figcaption>
+        46,99€ sur Amazon
+      </figcaption>
+    </figure>
+
+    <!--Jeu 8-->
+    <figure>
+      <a href="https://www.amazon.fr/Nintendo-1014265-Mario-Kart-Deluxe/dp/B01N1081RO/ref=pd_sim_63_10?_encoding=UTF8&pd_rd_i=B01N1081RO&pd_rd_r=0628726c-cc8b-4a47-8bf6-850d5c0d241c&pd_rd_w=G1Xo9&pd_rd_wg=Ecbfq&pf_rd_p=79de6a4a-b21a-4694-99e3-cde9267231ac&pf_rd_r=NEV47M1RK88HJGD04JFG&psc=1&refRID=NEV47M1RK88HJGD04JFG" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91BphPXVYVL._SL1500_.jpg" alt="Mario Kart" class="game" /></a>
+      <figcaption>
+        Mario Kart 8 Deluxe
+      </figcaption>
+      <figcaption>
+        	49,99€ sur Amazon
+      </figcaption>
+    </figure>
+  </div>
 
     <div class="gamesLine">
-      <!--Jeu 9
+      <!--Jeu 9-->
     <figure>
-      <a href="https://www.amazon.fr/Square-Enix-SQEA27-UK-22ST-Just-Cause/dp/B07DNY1KPK/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=just+cause+4&qid=1556021586&s=videogames&sr=1-2" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
+      <a href="https://www.amazon.fr/Legend-Zelda-Links-Awakening/dp/B07QZFLVM7/ref=pd_sim_63_11?_encoding=UTF8&pd_rd_i=B07QZFLVM7&pd_rd_r=0628726c-cc8b-4a47-8bf6-850d5c0d241c&pd_rd_w=G1Xo9&pd_rd_wg=Ecbfq&pf_rd_p=79de6a4a-b21a-4694-99e3-cde9267231ac&pf_rd_r=NEV47M1RK88HJGD04JFG&psc=1&refRID=NEV47M1RK88HJGD04JFG" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/91DFZJlRAsL._SL1500_.jpg" alt="Zelda" class="game" /></a>
       <figcaption>
-        Just cause 4
+        The Legend of Zelda: Link's Awakening
       </figcaption>
       <figcaption>
-        26,49€ sur Amazon
+        44,49€ sur Amazon
       </figcaption>
-      <figcaption>
-        69,99€ sur PlayStation
-      </figcaption>
-    </figure>-->
+    </figure>
 
-      <!--Jeu 10
+      <!--Jeu 10-->
     <figure>
-      <a href="#" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71qbzh%2BrMJL._SL1000_.jpg" alt="Crash Team Racing Nitro-Fueled" class="game" /></a>
+      <a href="https://www.amazon.fr/Football-Manager-2020-Limit%C3%A9e-pour/dp/B07XVTFCK7/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=football+manager+2020&qid=1574114372&sr=8-2" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/810sHDeQ2vL._SL1500_.jpg" alt="FM 2020" class="game" /></a>
       <figcaption>
-        Crash Team Racing Edition Nitros Oxyde
+        Football Manager 2020
       </figcaption>
       <figcaption>
-        Edition Nitros Oxyde
+        ???€ sur Amazon
       </figcaption>
-      <figcaption>
-        59,99€ sur PlayStation
-      </figcaption>
-    </figure>-->
+    </figure>
 
       <!--Jeu 11
     <figure>
