--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -33,7 +33,7 @@
       </figcaption>
     </figure>
 
-    <!--Jeu 2-->
+    <!--Jeu 2
     <figure>
       <a href="https://www.amazon.fr/Sony-MediEvil-PS4/dp/B07S31PDMW/ref=pd_sbs_63_10?_encoding=UTF8&pd_rd_i=B07S31PDMW&pd_rd_r=3b0e3e96-e177-435b-82b2-68912482730c&pd_rd_w=Ynh5I&pd_rd_wg=wBDIQ&pf_rd_p=26d54ac2-ee81-4c62-8302-1e18ced12245&pf_rd_r=F6VSN7G9329B1EM9A27K&psc=1&refRID=F6VSN7G9329B1EM9A27K" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81nVKa-ZJ4L._SL1500_.jpg" alt="Medievil" class="game" /></a>
       <figcaption>
@@ -42,7 +42,7 @@
       <figcaption>
         24,99€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Jeu 3-->
     <figure>
