--- a/livres.html
+++ b/livres.html
@@ -721,8 +721,8 @@
 
     <!--Livre 44-->
     <figure>
-      <a href="https://www.amazon.fr/B%C3%AAte-noire-Condamn%C3%A9-%C3%A0-plaider/dp/2290059749/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1573229678&sr=8-1"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61Xhar-nxKL.jpg" alt="Dupond Moretti" class="books" /></a>
+      <a href="https://www.amazon.fr/B%C3%AAte-noire-Condamn%C3%A9-%C3%A0-plaider/dp/2290059749/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1573229678&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61Xhar-nxKL.jpg"
+          alt="Dupond Moretti" class="books" /></a>
       <figcaption>
         Eric Dupond-Moretti
       </figcaption>
@@ -770,8 +770,8 @@
 
     <!--Livre 47-->
     <figure>
-      <a href="https://www.amazon.fr/R%C3%A9volte-rebelles-sport-Maryse-Ewanje-epee/dp/2755643641/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=revolte+maryse&qid=1571667765&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71u1ZRMhMHL.jpg" alt="Révolte ! Les rebelles du sport"
-          class="books" /></a>
+      <a href="https://www.amazon.fr/R%C3%A9volte-rebelles-sport-Maryse-Ewanje-epee/dp/2755643641/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=revolte+maryse&qid=1571667765&sr=8-1" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/71u1ZRMhMHL.jpg" alt="Révolte ! Les rebelles du sport" class="books" /></a>
       <figcaption>
         Maryse Éwanjé-Épée
       </figcaption>
@@ -786,8 +786,8 @@
     <!--Livre 48-->
 
     <figure>
-      <a href="https://www.amazon.fr/Lib%C3%A9rez-votre-cerveau-Idriss-ABERKANE/dp/2266278576/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1573516992&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/61ARxYzIhKL.jpg" alt="Libérez votre cerveau !" class="books" /></a>
+      <a href="https://www.amazon.fr/Lib%C3%A9rez-votre-cerveau-Idriss-ABERKANE/dp/2266278576/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1573516992&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61ARxYzIhKL.jpg"
+          alt="Libérez votre cerveau !" class="books" /></a>
       <figcaption>
         Idriss Aberkane
       </figcaption>
@@ -801,68 +801,70 @@
   </div>
 
 
-   <div class="booksLine">
-<!-- Livre 49-->
-  <figure>
-    <a href="https://www.amazon.fr/Tony-Parker-Au-del%C3%A0-tous-r%C3%AAves/dp/2263163077/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=tony+parker&qid=1574517060&sr=8-1" target="_blank"> <img
-        src="https://images-na.ssl-images-amazon.com/images/I/41%2BNz-fYroL.jpg" alt="Tony Parker" class="books" /></a>
-    <figcaption>
-      Tony Parker
-    </figcaption>
-    <figcaption>
-      Au-delà de tous mes rêves
-    </figcaption>
-    <figcaption>
-      19,20€
-    </figcaption>
-  </figure>
+  <div class="booksLine">
+    <!-- Livre 49-->
+    <figure>
+      <a href="https://www.amazon.fr/Tony-Parker-Au-del%C3%A0-tous-r%C3%AAves/dp/2263163077/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=tony+parker&qid=1574517060&sr=8-1" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/41%2BNz-fYroL.jpg" alt="Tony Parker" class="books" /></a>
+      <figcaption>
+        Tony Parker
+      </figcaption>
+      <figcaption>
+        Au-delà de tous mes rêves
+      </figcaption>
+      <figcaption>
+        19,20€
+      </figcaption>
+    </figure>
 
 
-  <!--Livre 50-->
-  <figure>
-    <a href="https://www.amazon.fr/Testament-marin-Olivier-Kersauson/dp/2749149347/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=3GBHTVT7MA1WJ&keywords=olivier+de+kersauson&qid=1574555953&sprefix=olivier+de+k%2Caps%2C143&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61xFgIgyTjL.jpg" alt="Kersauson" class="books" /></a>
-    <figcaption>
-      Olivier de Kersauson
-    </figcaption>
-    <figcaption>
-      De l'urgent, du presque rien et du rien du tout
-    </figcaption>
-    <figcaption>
-      18,50€
-    </figcaption>
-  </figure>
+    <!--Livre 50-->
+    <figure>
+      <a href="https://www.amazon.fr/Testament-marin-Olivier-Kersauson/dp/2749149347/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=3GBHTVT7MA1WJ&keywords=olivier+de+kersauson&qid=1574555953&sprefix=olivier+de+k%2Caps%2C143&sr=8-1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61xFgIgyTjL.jpg" alt="Kersauson" class="books" /></a>
+      <figcaption>
+        Olivier de Kersauson
+      </figcaption>
+      <figcaption>
+        De l'urgent, du presque rien et du rien du tout
+      </figcaption>
+      <figcaption>
+        18,50€
+      </figcaption>
+    </figure>
 
 
-  <!--Livre 51
-  <figure>
-    <a href="https://www.amazon.fr/Bilqiss-Saphia-Azzeddine/dp/2234077966/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1555434157&sr=1-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81eyYcanNOL.jpg" alt="Bilqiss" class="books" /></a>
-    <figcaption>
-      Saphia Azzeddine
-    </figcaption>
-    <figcaption>
-      Bilqiss
-    </figcaption>
-    <figcaption>
-      18,00€
-    </figcaption>
-  </figure>
--->
+    <!--Livre 51-->
+    <figure>
+      <a href="https://www.amazon.fr/Je-chemine-avec-Hubert-Reeves/dp/2021438783" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61-BRC-JkTL.jpg" alt="Hubert Reeves" class="books" /></a>
+      <figcaption>
+        Hubert Reeves
+      </figcaption>
+      <figcaption>
+        Je chemine avec Hubert Reeves
+      </figcaption>
+      <figcaption>
+        12,00€
+      </figcaption>
+    </figure>
 
-  <!--Livre 52
-  <figure>
-    <a href="https://www.amazon.fr/Sa-m%C3%A8re-Saphia-Azzeddine/dp/2234081742/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71vCBTDzN5L.jpg" alt="Sa Mère" class="books" /></a>
-    <figcaption>
-      Saphia Azzeddine
-    </figcaption>
-    <figcaption>
-      Sa mère
-    </figcaption>
-    <figcaption>
-      19,00€
-    </figcaption>
-  </figure>
-</div>
--->
+
+    <!--Livre 52-->
+    <figure>
+      <a href="https://www.amazon.fr/D%C3%A9jeuner-en-paix-Charlotte-GABRIS/dp/2749164141/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1575764282&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61hP3yb%2BayL.jpg"
+          alt="Déjeuner en paix" class="books" /></a>
+      <figcaption>
+        Charlotte Gabris
+      </figcaption>
+      <figcaption>
+        Déjeuner en paix
+      </figcaption>
+      <figcaption>
+        17,00€
+      </figcaption>
+    </figure>
+  </div>
+
 
   <!--  <div class="booksLine">
 Livre 53
