--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -23,8 +23,8 @@
   <div class="gamesLine">
     <!--Jeu 1-->
     <figure>
-      <a href="https://www.amazon.fr/Star-Wars-Jedi-Fallen-Order/dp/B07QN7HVMH/ref=sr_1_12?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=6PRCMHAUXCC&keywords=jedi+fallen+order&qid=1574032856&sprefix=jedi+fallen+o%2Caps%2C148&sr=8-12" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/71Xz9rNV5HL._SL1245_.jpg" alt="Fallen Order" class="game" /></a>
+      <a href="https://www.amazon.fr/Star-Wars-Jedi-Fallen-Order/dp/B07QN7HVMH/ref=sr_1_12?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=6PRCMHAUXCC&keywords=jedi+fallen+order&qid=1574032856&sprefix=jedi+fallen+o%2Caps%2C148&sr=8-12"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71Xz9rNV5HL._SL1245_.jpg" alt="Fallen Order" class="game" /></a>
       <figcaption>
         Star Wars Jedi : Fallen Order
       </figcaption>
@@ -46,65 +46,66 @@
 
     <!--Jeu 3-->
     <figure>
-      <a href="https://www.amazon.fr/Nintendo-Switch-avec-paire-Rouge/dp/B07WKNQ8JT/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=nintendo%2Bswitch&qid=1574032957&sr=8-1&th=1"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71NaHhGzY7L._SL1500_.jpg" alt="Switch" class="game" /></a>
+      <a href="https://www.amazon.fr/Nintendo-1014265-Mario-Kart-Deluxe/dp/B01N1081RO/ref=pd_sim_63_10?_encoding=UTF8&pd_rd_i=B01N1081RO&pd_rd_r=0628726c-cc8b-4a47-8bf6-850d5c0d241c&pd_rd_w=G1Xo9&pd_rd_wg=Ecbfq&pf_rd_p=79de6a4a-b21a-4694-99e3-cde9267231ac&pf_rd_r=NEV47M1RK88HJGD04JFG&psc=1&refRID=NEV47M1RK88HJGD04JFG"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91BphPXVYVL._SL1500_.jpg" alt="Mario Kart" class="game" /></a>
       <figcaption>
-        Nintendo Switch
+        Mario Kart 8 Deluxe
       </figcaption>
       <figcaption>
-        299,98€ sur Amazon
+        49,99€ sur Amazon
       </figcaption>
     </figure>
 
     <!--Jeu 4-->
     <figure>
-      <a href="https://www.amazon.fr/Nintendo-Pok%C3%A9mon-Ep%C3%A9e/dp/B07R2M7H64/ref=pd_sim_63_14?_encoding=UTF8&pd_rd_i=B07QV7YRT7&pd_rd_r=0628726c-cc8b-4a47-8bf6-850d5c0d241c&pd_rd_w=G1Xo9&pd_rd_wg=Ecbfq&pf_rd_p=79de6a4a-b21a-4694-99e3-cde9267231ac&pf_rd_r=NEV47M1RK88HJGD04JFG&refRID=NEV47M1RK88HJGD04JFG&th=1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/819sd2k1sCL._SL1500_.jpg" alt="Pokemon" class="game" /></a>
+      <a href="https://www.amazon.fr/Legend-Zelda-Links-Awakening/dp/B07QZFLVM7/ref=pd_sim_63_11?_encoding=UTF8&pd_rd_i=B07QZFLVM7&pd_rd_r=0628726c-cc8b-4a47-8bf6-850d5c0d241c&pd_rd_w=G1Xo9&pd_rd_wg=Ecbfq&pf_rd_p=79de6a4a-b21a-4694-99e3-cde9267231ac&pf_rd_r=NEV47M1RK88HJGD04JFG&psc=1&refRID=NEV47M1RK88HJGD04JFG"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91DFZJlRAsL._SL1500_.jpg" alt="Zelda" class="game" /></a>
       <figcaption>
-        Pokémon Bouclier
+        The Legend of Zelda: Link's Awakening
       </figcaption>
       <figcaption>
         44,49€ sur Amazon
       </figcaption>
     </figure>
-  </div>
 
-  <div class="gamesLine">
-    <!--Jeu 5-->
-    <figure>
-      <a href="https://www.amazon.fr/Nintendo-0045496420888-Super-Mario-Odyssey/dp/B072KJWYL9/ref=pd_sim_63_8?_encoding=UTF8&pd_rd_i=B072KJWYL9&pd_rd_r=faba7ffe-f309-4f16-9853-9816416fa012&pd_rd_w=w36ZL&pd_rd_wg=h1L5Z&pf_rd_p=79de6a4a-b21a-4694-99e3-cde9267231ac&pf_rd_r=C8DP4MVYDHMZ7AK23MT4&psc=1&refRID=C8DP4MVYDHMZ7AK23MT4" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71YHciwZNAL._SL1000_.jpg" alt="Super Mario" class="game" /></a>
-      <figcaption>
-        Super Mario Odyssey
-      </figcaption>
-      <figcaption>
-        44,49€
-      </figcaption>
-    </figure>
+    <div class="gamesLine">
+      <!--Jeu 5-->
+      <figure>
+        <a href="https://www.amazon.fr/Nintendo-0045496420888-Super-Mario-Odyssey/dp/B072KJWYL9/ref=pd_sim_63_8?_encoding=UTF8&pd_rd_i=B072KJWYL9&pd_rd_r=faba7ffe-f309-4f16-9853-9816416fa012&pd_rd_w=w36ZL&pd_rd_wg=h1L5Z&pf_rd_p=79de6a4a-b21a-4694-99e3-cde9267231ac&pf_rd_r=C8DP4MVYDHMZ7AK23MT4&psc=1&refRID=C8DP4MVYDHMZ7AK23MT4"
+          target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71YHciwZNAL._SL1000_.jpg" alt="Super Mario" class="game" /></a>
+        <figcaption>
+          Super Mario Odyssey
+        </figcaption>
+        <figcaption>
+          44,49€
+        </figcaption>
+      </figure>
 
-    <!--Jeu 6-->
-    <figure>
-      <a href="https://www.amazon.fr/Nintendo-Super-Smash-Bros-Ultimate/dp/B07DPQD26J/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2A8N9OZP36T2M&keywords=smash+bros+ultimate&qid=1574113818&s=videogames&sprefix=smash%2Cvideogames%2C140&sr=1-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/81nTBvXpItL._SL1339_.jpg" alt="Smash Bros" class="game" /></a>
-      <figcaption>
-        Super Smash Bros Ultimate
-      </figcaption>
-      <figcaption>
-        49,00€ sur Amazon
-      </figcaption>
-    </figure>
+      <!--Jeu 6-->
+      <figure>
+        <a href="https://www.amazon.fr/Nintendo-Super-Smash-Bros-Ultimate/dp/B07DPQD26J/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2A8N9OZP36T2M&keywords=smash+bros+ultimate&qid=1574113818&s=videogames&sprefix=smash%2Cvideogames%2C140&sr=1-1"
+          target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81nTBvXpItL._SL1339_.jpg" alt="Smash Bros" class="game" /></a>
+        <figcaption>
+          Super Smash Bros Ultimate
+        </figcaption>
+        <figcaption>
+          49,00€ sur Amazon
+        </figcaption>
+      </figure>
 
-    <!--Jeu 7-->
-    <figure>
-      <a href="https://www.amazon.fr/Nintendo-0045496423124-Pok%C3%A9mon-Lets-Pikachu/dp/B07DF4HGBY/ref=pd_sim_63_7?_encoding=UTF8&pd_rd_i=B07DF4HGBY&pd_rd_r=0628726c-cc8b-4a47-8bf6-850d5c0d241c&pd_rd_w=G1Xo9&pd_rd_wg=Ecbfq&pf_rd_p=79de6a4a-b21a-4694-99e3-cde9267231ac&pf_rd_r=NEV47M1RK88HJGD04JFG&refRID=NEV47M1RK88HJGD04JFG&th=1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/81liPjEvyDL._SL1500_.jpg" alt="Let's Go" class="game" /></a>
-      <figcaption>
-        Pokémon : Let's Go, Pikachu
-      </figcaption>
-      <figcaption>
-        46,99€ sur Amazon
-      </figcaption>
-    </figure>
+      <!--Jeu 7-->
+      <figure>
+        <a href="https://www.amazon.fr/Nintendo-0045496423124-Pok%C3%A9mon-Lets-Pikachu/dp/B07DF4HGBY/ref=pd_sim_63_7?_encoding=UTF8&pd_rd_i=B07DF4HGBY&pd_rd_r=0628726c-cc8b-4a47-8bf6-850d5c0d241c&pd_rd_w=G1Xo9&pd_rd_wg=Ecbfq&pf_rd_p=79de6a4a-b21a-4694-99e3-cde9267231ac&pf_rd_r=NEV47M1RK88HJGD04JFG&refRID=NEV47M1RK88HJGD04JFG&th=1"
+          target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81liPjEvyDL._SL1500_.jpg" alt="Let's Go" class="game" /></a>
+        <figcaption>
+          Pokémon : Let's Go, Pikachu
+        </figcaption>
+        <figcaption>
+          46,99€ sur Amazon
+        </figcaption>
+      </figure>
 
-    <!--Jeu 8-->
+      <!--Jeu 8
     <figure>
       <a href="https://www.amazon.fr/Nintendo-1014265-Mario-Kart-Deluxe/dp/B01N1081RO/ref=pd_sim_63_10?_encoding=UTF8&pd_rd_i=B01N1081RO&pd_rd_r=0628726c-cc8b-4a47-8bf6-850d5c0d241c&pd_rd_w=G1Xo9&pd_rd_wg=Ecbfq&pf_rd_p=79de6a4a-b21a-4694-99e3-cde9267231ac&pf_rd_r=NEV47M1RK88HJGD04JFG&psc=1&refRID=NEV47M1RK88HJGD04JFG" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91BphPXVYVL._SL1500_.jpg" alt="Mario Kart" class="game" /></a>
       <figcaption>
@@ -114,10 +115,10 @@
         	49,99€ sur Amazon
       </figcaption>
     </figure>
-  </div>
+  </div>-->
 
-    <div class="gamesLine">
-      <!--Jeu 9-->
+      <div class="gamesLine">
+        <!--Jeu 9
     <figure>
       <a href="https://www.amazon.fr/Legend-Zelda-Links-Awakening/dp/B07QZFLVM7/ref=pd_sim_63_11?_encoding=UTF8&pd_rd_i=B07QZFLVM7&pd_rd_r=0628726c-cc8b-4a47-8bf6-850d5c0d241c&pd_rd_w=G1Xo9&pd_rd_wg=Ecbfq&pf_rd_p=79de6a4a-b21a-4694-99e3-cde9267231ac&pf_rd_r=NEV47M1RK88HJGD04JFG&psc=1&refRID=NEV47M1RK88HJGD04JFG" target="_blank"> <img
           src="https://images-na.ssl-images-amazon.com/images/I/91DFZJlRAsL._SL1500_.jpg" alt="Zelda" class="game" /></a>
@@ -127,9 +128,9 @@
       <figcaption>
         44,49€ sur Amazon
       </figcaption>
-    </figure>
+    </figure>-->
 
-      <!--Jeu 10-->
+        <!--Jeu 10
     <figure>
       <a href="https://www.amazon.fr/Football-Manager-2020-Limit%C3%A9e-pour/dp/B07XVTFCK7/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=football+manager+2020&qid=1574114372&sr=8-2" target="_blank"> <img
           src="https://images-na.ssl-images-amazon.com/images/I/810sHDeQ2vL._SL1500_.jpg" alt="FM 2020" class="game" /></a>
@@ -139,9 +140,9 @@
       <figcaption>
         ???€ sur Amazon
       </figcaption>
-    </figure>
+    </figure>-->
 
-      <!--Jeu 11
+        <!--Jeu 11
     <figure>
       <a href="https://www.amazon.fr/Codemasters-F1-2019-EDITION-LEGENDES/dp/B07RCV5T9R/ref=cm_cr_arp_d_product_top?ie=UTF8" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61Gw-F-rCIL._SL1000_.jpg" alt="F1 2019"
           class="game" /></a>
@@ -153,7 +154,7 @@
       </figcaption>
     </figure>-->
 
-      <!--Jeu 12
+        <!--Jeu 12
     <figure>
       <a href="#" target="_blank"> <img
           src="https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwijlfSg9JPjAhXSLVAKHeA8BHAQjRx6BAgBEAU&url=https%3A%2F%2F2kgamer.com%2Ft%2Fwho-do-you-think-will-be-the-nba-2k20-cover-athlete%2F45722%3Fpage%3D2&psig=AOvVaw3QDBpeCAuvrOn-ofckaKga&ust=1562076940391318"
@@ -165,9 +166,9 @@
         99,99€ sur PlayStation
       </figcaption>
     </figure>-->
-    </div>
+      </div>
 
-    <!--  <div class="gamesLine">
+      <!--  <div class="gamesLine">
 Jeu 13
 <figure>
   <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
@@ -179,7 +180,7 @@ Jeu 13
   </figcaption>
 </figure>
 -->
-    <!--Jeu 14
+      <!--Jeu 14
   <figure>
     <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
     <figcaption>
@@ -190,7 +191,7 @@ Jeu 13
     </figcaption>
   </figure>
 -->
-    <!--Jeu 15
+      <!--Jeu 15
   <figure>
     <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
     <figcaption>
@@ -201,7 +202,7 @@ Jeu 13
     </figcaption>
   </figure>
 -->
-    <!--Jeu 16
+      <!--Jeu 16
   <figure>
     <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
     <figcaption>
@@ -213,8 +214,8 @@ Jeu 13
   </figure>
   </div>
 -->
-    <!--<div class="gamesLine">-->
-    <!--Jeu 17
+      <!--<div class="gamesLine">-->
+      <!--Jeu 17
   <figure>
     <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
     <figcaption>
@@ -225,7 +226,7 @@ Jeu 13
     </figcaption>
   </figure>
 -->
-    <!--Jeu 18
+      <!--Jeu 18
   <figure>
     <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
     <figcaption>
@@ -237,7 +238,7 @@ Jeu 13
   </figure>
   -->
 
-    <!--Jeu 19
+      <!--Jeu 19
   <figure>
     <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
     <figcaption>
@@ -248,7 +249,7 @@ Jeu 13
     </figcaption>
   </figure>
 -->
-    <!--Jeu 20
+      <!--Jeu 20
   <figure>
     <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
     <figcaption>
@@ -261,8 +262,8 @@ Jeu 13
   </div>
 -->
 
-    <!--<div class="gamesLine">-->
-    <!--Jeu 21
+      <!--<div class="gamesLine">-->
+      <!--Jeu 21
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -273,7 +274,7 @@ Jeu 13
 </figcaption>
 </figure>
 -->
-    <!--Jeu 22
+      <!--Jeu 22
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -285,7 +286,7 @@ Jeu 13
 </figure>
 -->
 
-    <!--Jeu 23
+      <!--Jeu 23
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -296,7 +297,7 @@ Jeu 13
 </figcaption>
 </figure>
 -->
-    <!--Jeu 24
+      <!--Jeu 24
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -309,8 +310,8 @@ Jeu 13
 </div>
 -->
 
-    <!--<div class="gamesLine">-->
-    <!--Jeu 25
+      <!--<div class="gamesLine">-->
+      <!--Jeu 25
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -321,7 +322,7 @@ Jeu 13
 </figcaption>
 </figure>
 -->
-    <!--Jeu 26
+      <!--Jeu 26
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -333,7 +334,7 @@ Jeu 13
 </figure>
 -->
 
-    <!--Jeu 27
+      <!--Jeu 27
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -344,7 +345,7 @@ Jeu 13
 </figcaption>
 </figure>
 -->
-    <!--Jeu 28
+      <!--Jeu 28
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -357,8 +358,8 @@ Jeu 13
 </div>
 -->
 
-    <!--<div class="gamesLine">-->
-    <!--Jeu 29
+      <!--<div class="gamesLine">-->
+      <!--Jeu 29
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -369,7 +370,7 @@ Jeu 13
 </figcaption>
 </figure>
 -->
-    <!--Jeu 30
+      <!--Jeu 30
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -381,7 +382,7 @@ Jeu 13
 </figure>
 -->
 
-    <!--Jeu 31
+      <!--Jeu 31
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -392,7 +393,7 @@ Jeu 13
 </figcaption>
 </figure>
 -->
-    <!--Jeu 32
+      <!--Jeu 32
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -405,8 +406,8 @@ Jeu 13
 </div>
 -->
 
-    <!--<div class="gamesLine">-->
-    <!--Jeu 33
+      <!--<div class="gamesLine">-->
+      <!--Jeu 33
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -417,7 +418,7 @@ Jeu 13
 </figcaption>
 </figure>
 -->
-    <!--Jeu 34
+      <!--Jeu 34
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -429,7 +430,7 @@ Jeu 13
 </figure>
 -->
 
-    <!--Jeu 35
+      <!--Jeu 35
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -440,7 +441,7 @@ Jeu 13
 </figcaption>
 </figure>
 -->
-    <!--Jeu 36
+      <!--Jeu 36
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -453,8 +454,8 @@ Jeu 13
 </div>
 -->
 
-    <!--<div class="gamesLine">-->
-    <!--Jeu 37
+      <!--<div class="gamesLine">-->
+      <!--Jeu 37
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -465,7 +466,7 @@ Jeu 13
 </figcaption>
 </figure>
 -->
-    <!--Jeu 38
+      <!--Jeu 38
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -477,7 +478,7 @@ Jeu 13
 </figure>
 -->
 
-    <!--Jeu 39
+      <!--Jeu 39
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -488,7 +489,7 @@ Jeu 13
 </figcaption>
 </figure>
 -->
-    <!--Jeu 40
+      <!--Jeu 40
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
