--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -114,8 +114,8 @@
       <figcaption>
         	49,99€ sur Amazon
       </figcaption>
-    </figure>
-  </div>-->
+    </figure>-->
+  </div>
 
       <div class="gamesLine">
         <!--Jeu 9
