--- a/autres.html
+++ b/autres.html
@@ -24,7 +24,7 @@
     <!--Autres 1-->
     <figure>
       <a href="https://shop.vitality.gg/products/maillot-officiel-team-vitality-floque?variant=29379536715894" target="_blank"> <img
-          src="https://cdn.shopify.com/s/files/1/0049/2293/3366/products/blck-orange_32fb5c4b-2e1e-43fd-a81e-8411bd74226f_600x800_crop_center.jpg" alt="Vitality" class="others" /></a>
+          src="http://cdn.shopify.com/s/files/1/0049/2293/3366/products/blck-orange_32fb5c4b-2e1e-43fd-a81e-8411bd74226f_600x800_crop_center.jpg" alt="Vitality" class="others" /></a>
       <figcaption>
         Maillot Vitality
       </figcaption>
