--- a/livres.html
+++ b/livres.html
@@ -147,16 +147,16 @@
   <div class="booksLine">
     <!--Livre 9-->
     <figure>
-      <a href="https://www.amazon.fr/Guide-%C3%A9gar%C3%A9s-Jean-d-Ormesson/dp/2072694361/ref=sr_1_4?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=jean+d%27ormesson&qid=1555280806&s=gateway&sr=8-4" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/81EK9zHT2fL.jpg" alt="Guide des Égarés" class="books" /></a>
+      <a href="https://www.amazon.fr/Gomorra-lempire-camorra-Roberto-Saviano/dp/2072798108/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1576243714&sr=8-3" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81OAmpbvz5L.jpg"
+          alt="Gomorra" class="books" /></a>
       <figcaption>
-        Jean d'Ormesson
+        Roberto Saviano
       </figcaption>
       <figcaption>
-        Guide des Égarés
+        Gomorra
       </figcaption>
       <figcaption>
-        14,00€
+        9,50€
       </figcaption>
     </figure>
 
@@ -899,7 +899,7 @@
   </figure>
 
 
-  <!--Livre 55-->
+  <!--Livre 55
   <figure>
     <a href="https://www.amazon.fr/Gomorra-lempire-camorra-Roberto-Saviano/dp/2072798108/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1576243714&sr=8-3" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81OAmpbvz5L.jpg"
         alt="Gomorra" class="books" /></a>
@@ -912,7 +912,7 @@
     <figcaption>
       9,50€
     </figcaption>
-  </figure>
+  </figure>-->
 
 
   <!--Livre 56
