--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -99,7 +99,7 @@
       <a href="https://www.amazon.fr/Nintendo-0045496423124-Pok%C3%A9mon-Lets-Pikachu/dp/B07DF4HGBY/ref=pd_sim_63_7?_encoding=UTF8&pd_rd_i=B07DF4HGBY&pd_rd_r=0628726c-cc8b-4a47-8bf6-850d5c0d241c&pd_rd_w=G1Xo9&pd_rd_wg=Ecbfq&pf_rd_p=79de6a4a-b21a-4694-99e3-cde9267231ac&pf_rd_r=NEV47M1RK88HJGD04JFG&refRID=NEV47M1RK88HJGD04JFG&th=1"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81liPjEvyDL._SL1500_.jpg" alt="Let's Go" class="game" /></a>
       <figcaption>
-        Pokémon : Let's Go, Pikachu
+        Pokémon : Let's Go, Pikachu!
       </figcaption>
       <figcaption>
         46,99€ sur Amazon
